--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --progress --colors --hot --config webpack.config.js --watch"
+    "start": "webpack-dev-server -d --progress --colors --hot --config webpack.config.js --watch",
+    "production": "SET NODE_ENV=production & webpack -p"
   },
   "keywords": [],
   "author": "",
