--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.1",
