--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --progress && webpack-dev-server -d --progress --colors --hot --config webpack.config.js --watch",
-    "production": "SET NODE_ENV=production & webpack -p"
+    "production": "SET NODE_ENV=production & webpack -p",
+    "build": "SET NODE_ENV=production & webpack -p"
   },
   "keywords": [],
   "author": "",
