--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
   "extends": "airbnb",
   "env": {
-    "browser": true,
+    "browser": true
   },
+  "parser": "babel-eslint",
   "plugins": [
     "react"
   ],
