--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-hot-loader": "^1.1.1",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
@@ -43,9 +44,14 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redbox-react": "^1.4.2",
+    "redux": "^3.7.0",
+    "redux-thunk": "^2.2.0"
   }
 }
