--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "history": "^4.6.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redbox-react": "^1.4.2",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0"
