--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "history": "^4.6.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
