--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
+    "react-templates": "^0.6.1",
+    "react-templates-loader": "^0.6.2",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.6.1",
