Installed jest, babel-jest (since we use babel for es6), transform-es2015-modules-commonjs babel plugin (since we use es6 module syntax that does not work in node, and jest runs under node), dynamic-import-node babel plugin (since we use es6 dynamic imports in some places)
npm install --save-dev jest babel-jest babel-plugin-transform-es2015-modules-commonjs babel-plugin-dynamic-import-node

Added the following jest configuration to package.json

jest": {
    "moduleFileExtensions": [
      "js",
      "jsx"
    ],
    "moduleDirectories": [
      "node_modules"
    ],
    "modulePaths": [
      "/src/app"
    ],
    "moduleNameMapper": {
      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/app/shared/utils/file-mock.js",
      "\\.(css|less)$": "<rootDir>/src/app/shared/utils/style-mock.js"
    }
  }

moduleFileExtensions tells what file extensions jest should look at
moduleDirectories tells which jest should look for resolving node modules imports
modulePaths needs to be set to src/app since we use resolve.modules in webpack.config.js to avoid relative paths in some places.
moduleNameMapper is to mock static file imports in js / jsx files.

Included the following config in .babelrc for jest support
"env": {
    "test": {
      "plugins": ["transform-es2015-modules-commonjs", "dynamic-import-node"]
    }
  }
transform-es2015-modules-commonjs babel plugin (since we use es6 module syntax that does not work in node, and jest runs under node), dynamic-import-node babel plugin (since we use es6 dynamic imports in some places)

Install vscode plugin for jest named jest by orta

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,10 @@
     "react",
     "stage-2"
   ],
-  "plugins": ["dynamic-import-webpack"]
+  "plugins": ["dynamic-import-webpack"],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs", "dynamic-import-node"]
+    }
+  }
 }
