--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint app/src && jest --coverage",
     "start": "webpack --progress && webpack-dev-server -d --progress --colors --hot --config webpack.config.js --watch",
     "production": "SET NODE_ENV=production & webpack -p",
     "build": "SET NODE_ENV=production & webpack -p"
@@ -16,8 +16,11 @@
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -33,6 +36,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.3.1",
+    "jest": "^20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
@@ -50,6 +54,7 @@
     "material-ui": "^0.18.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
@@ -61,5 +66,21 @@
     "redbox-react": "^1.4.2",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "modulePaths": [
+      "/src/app"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/app/shared/utils/file-mock.js",
+      "\\.(css|less)$": "<rootDir>/src/app/shared/utils/style-mock.js"
+    }
   }
 }
