--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "@cycle/time": "^0.8.0",
     "history": "^4.6.2",
     "material-ui": "^0.18.3",
     "prop-types": "^15.5.10",
