--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "redbox-react": "^1.4.2",
     "redux": "^3.7.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rxjs": "^5.4.1"
   },
   "jest": {
     "moduleFileExtensions": [
