--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
+    "react-jsonschema-form": "^0.49.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
