--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-helmet": "^5.1.3",
     "react-jsonschema-form": "^0.49.0",
     "react-redux": "^5.0.5",
+    "react-redux-form": "^1.13.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
