--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "production": "SET NODE_ENV=production & webpack -p",
     "build": "SET NODE_ENV=production & webpack -p",
     "precommit": "npm run test",
-    "prepush": "npm run test"
+    "prepush": "npm run test",
+    "build:langs": "./node_modules/.bin/babel-node src/utils/translator.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.24.1",    
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-plugin-react-intl": "^2.3.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -62,6 +65,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
+    "react-intl": "^2.3.0",
     "react-jsonschema-form": "^0.49.0",
     "react-redux": "^5.0.5",
     "react-redux-form": "^1.13.0",
