--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "SET NODE_ENV=production & webpack -p",
     "precommit": "npm run test",
     "prepush": "npm run test",
-    "build:langs": "./node_modules/.bin/babel-node src/utils/translator.js"
+    "build:langs": "./node_modules/.bin/babel-node src/utils/translator.js",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "keywords": [],
   "author": "",
@@ -48,6 +50,7 @@
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
+    "react-styleguidist": "^5.5.4",
     "react-templates": "^0.6.1",
     "react-templates-loader": "^0.6.2",
     "style-loader": "^0.18.2",
@@ -57,7 +60,11 @@
   },
   "dependencies": {
     "@cycle/time": "^0.8.0",
+    "bootstrap": "^3.3.7",
     "history": "^4.6.2",
+    "inversify": "^4.2.0",
+    "inversify-inject-decorators": "^3.0.1",
+    "inversify-vanillajs-helpers": "^2.0.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.3",
     "prop-types": "^15.5.10",
@@ -78,7 +85,9 @@
     "redux": "^3.7.0",
     "redux-cycles": "^0.4.1",
     "redux-thunk": "^2.2.0",
-    "rxjs": "^5.4.1"
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.1",
+    "url-loader": "^0.5.9"
   },
   "jest": {
     "moduleFileExtensions": [
